--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Build with Next.js
         run: npm run build
       
+      - name: List directory contents
+        run: ls -la
+      
+      - name: Check out directory
+        run: ls -la out/
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
