debug: GitHub Actions 빌드 출력 디렉토리 확인을 위한 디버깅 단계 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,20 @@ jobs:
         env:
           NODE_ENV: production
       
+      - name: List root directory after build
+        run: |
+          echo "Root directory contents:"
+          ls -la
+          echo "Checking for common build output directories:"
+          for dir in out dist build .next; do
+            if [ -d "$dir" ]; then
+              echo "$dir directory exists:"
+              ls -la "$dir/"
+            else
+              echo "$dir directory does not exist"
+            fi
+          done
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
