fix: GitHub Actions 빌드 실패 원인 분석을 위한 개선
   - 빌드 과정 로깅 추가로 실행 상태 추적
   - out 디렉토리 존재 여부 확인 후 조건부 아티팩트 업로드
   - tar 에러 방지를 위한 안전장치 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,10 @@ jobs:
         run: npm ci
       
       - name: Build with Next.js
-        run: npm run build
+        run: |
+          echo "Starting build process..."
+          npm run build
+          echo "Build completed, checking results..."
         env:
           NODE_ENV: production
       
@@ -67,6 +70,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
+        if: success() && hashFiles('out/**') != ''
 
   deploy:
     environment:
