fix: next.config.js 충돌 해결로 정적 export 문제 수정
   - GitHub Actions에서 next.config.js 파일 제거
   - next.config.ts의 output: 'export' 설정이 올바르게 적용되도록 수정
   - 빌드 전 설정 파일 내용 확인 단계 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       
+      - name: Remove conflicting config file
+        run: |
+          if [ -f "next.config.js" ]; then
+            echo "Removing conflicting next.config.js file"
+            rm next.config.js
+          fi
+          echo "Using next.config.ts file:"
+          cat next.config.ts
+      
       - name: Install dependencies
         run: npm ci
       
