debug: basePath 적용 여부 확인을 위한 디버깅 단계 추가
  - 빌드 시 환경변수 및 설정 파일 내용 출력
  - HTML에서 basePath 적용 여부 확인
  - GitHub Actions에서 basePath가 제대로 작동하는지 검증

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,10 +56,14 @@ jobs:
       - name: Build with Next.js
         run: |
           echo "Starting build process..."
+          echo "GITHUB_ACTIONS environment: $GITHUB_ACTIONS"
+          echo "NODE_ENV: $NODE_ENV"
+          cat next.config.ts
           npm run build
           echo "Build completed, checking results..."
         env:
           NODE_ENV: production
+          GITHUB_ACTIONS: true
       
       - name: List root directory after build
         run: |
@@ -80,6 +84,8 @@ jobs:
           if [ -d "out" ]; then
             echo "out directory exists, proceeding with upload"
             ls -la out/
+            echo "Checking basePath in HTML:"
+            head -20 out/index.html | grep -i "portfolio-2025\|/_next" || echo "No basePath found in HTML"
           else
             echo "ERROR: out directory does not exist!"
             echo "Build may have failed or configuration issue"
