fix: GitHub Actions 프로덕션 환경 변수 설정으로 이미지 경로 문제 해결
  - NEXT_PUBLIC_NODE_ENV=production 환경변수 추가
  - 이중 환경변수 체크로 프로덕션 환경 감지 개선
  - GitHub Actions에서 basePath가 확실히 적용되도록 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,7 @@ jobs:
           echo "Build completed, checking results..."
         env:
           NODE_ENV: production
+          NEXT_PUBLIC_NODE_ENV: production
           GITHUB_ACTIONS: true
       
       - name: List root directory after build
