--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,15 +56,12 @@ jobs:
       - name: Build with Next.js
         run: |
           echo "Starting build process..."
-          echo "GITHUB_ACTIONS environment: $GITHUB_ACTIONS"
-          echo "NODE_ENV: $NODE_ENV"
+          echo "NODE_ENV before: $NODE_ENV"
+          export NODE_ENV=production
+          echo "NODE_ENV after: $NODE_ENV"
           cat next.config.ts
-          npm run build
+          npm run build:prod
           echo "Build completed, checking results..."
-        env:
-          NODE_ENV: production
-          NEXT_PUBLIC_NODE_ENV: production
-          GITHUB_ACTIONS: true
       
       - name: List root directory after build
         run: |
