fix: GitHub Actions에서 NODE_ENV=production 환경변수 올바른 설정
  - 빌드 단계에 env: NODE_ENV=production 명시적 추가
  - Next.js basePath가 프로덕션에서 확실히 적용되도록 수정
  - 불필요한 커스텀 빌드 스크립트 제거하고 표준 방식 사용

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,12 +56,12 @@ jobs:
       - name: Build with Next.js
         run: |
           echo "Starting build process..."
-          echo "NODE_ENV before: $NODE_ENV"
-          export NODE_ENV=production
-          echo "NODE_ENV after: $NODE_ENV"
+          echo "NODE_ENV: $NODE_ENV"
           cat next.config.ts
-          npm run build:prod
+          npm run build
           echo "Build completed, checking results..."
+        env:
+          NODE_ENV: production
       
       - name: List root directory after build
         run: |
